Fast end reminder

--- a/FastWater/GoogleService-Info.plist
+++ b/FastWater/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>673680407673-0amreq1ajsi7r1cg3esg0mnl24uisap5.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.673680407673-0amreq1ajsi7r1cg3esg0mnl24uisap5</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBrBkkLpTr2-3Bzyrd6-6zYxV_0nrk8OYg</string>
 	<key>GCM_SENDER_ID</key>
